--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -43,3 +43,59 @@ jobs:
 
       - name: Run tests
         run: go test -race -vet=off ./...
+
+  sonar-cloud-analysis:
+    name: SonarCloud Analysis
+    runs-on: ubuntu-latest
+    needs: [ci-test]
+    steps:
+      - name: Checkout Tyk Storage
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 2
+      - name: Setup Golang
+        uses: actions/setup-go@v3
+        with:
+          go-version: ${{ env.GO_VERSION }}
+      - name: Download coverage artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: coverage
+      - name: Download golangcilint artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: golangcilint
+      - name: Check reports existence
+        id: check_files
+        uses: andstor/file-existence-action@v1
+        with:
+          files: "coverage/*.cov, golanglint.xml"
+      - name: Install Dependencies
+        env:
+          TOKEN: "${{ secrets.ORG_GH_TOKEN }}"
+        run: >
+          git config --global url."https://${TOKEN}@github.com".insteadOf "https://github.com"
+
+          go install github.com/wadey/gocovmerge@latest
+      - name: Install Task
+        uses: arduino/setup-task@v1
+        with:
+          version: 3
+      - name: merge reports
+        run: task merge-coverage
+      - name: SonarCloud Scan
+        uses: sonarsource/sonarcloud-github-action@master
+        with:
+          args: >
+            -Dsonar.organization=tyktechnologies
+            -Dsonar.projectKey=TykTechnologies_storage
+            -Dsonar.sources=.
+            -Dsonar.coverage.exclusions=**/*_test.go,**/mocks/*.go,**/tempmocks/*.go
+            -Dsonar.exclusions=**/mocks/*.go,**/tempmocks/*.go
+            -Dsonar.test.inclusions=**/*_test.go
+            -Dsonar.tests=.
+            -Dsonar.go.coverage.reportPaths=merged-coverage.cov
+            -Dsonar.go.golangci-lint.reportPaths=golanglint.xml
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
