--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -35,14 +35,40 @@ jobs:
       - name: Run staticcheck
         run: staticcheck ./...
 
-      - name: Install golint
-        run: go install golang.org/x/lint/golint@latest
-
-      - name: Run golint
-        run: golint ./...
-
       - name: Run tests
         run: go test -race -vet=off ./...
+
+  golangci-lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: use gh token
+        env:
+          TOKEN: "${{ secrets.ORG_GH_TOKEN }}"
+        run: >
+          git config --global url."https://${TOKEN}@github.com".insteadOf "https://github.com"
+      - name: Checkout Storage
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 2
+      - name: Fetch base branch
+        if: ${{ github.event_name == 'pull_request' }}
+        run: git fetch origin ${{ github.base_ref }}
+      - name: Setup Golang
+        uses: actions/setup-go@v3
+        with:
+          go-version: ${{ env.GO_VERSION }}
+      - name: Download golangci-lint
+        run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin
+      - name: golangci-lint
+        if: ${{ contains(fromJSON('["push","pull_request"]'), github.event_name) }}
+        run: |
+          $(go env GOPATH)/bin/golangci-lint run --out-format checkstyle --timeout=300s --max-issues-per-linter=0 --max-same-issues=0 --issues-exit-code=0 --new-from-rev=origin/${{ github.base_ref }} ./... > golanglint.xml
+      - uses: actions/upload-artifact@v2
+        with:
+          name: golangcilint
+          retention-days: 1
+          path: |
+            golanglint.xml
 
   sonar-cloud-analysis:
     name: SonarCloud Analysis
