--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -95,14 +95,7 @@ jobs:
         id: check_files
         uses: andstor/file-existence-action@v1
         with:
-          files: "coverage/*.cov, golanglint.xml"
-      - name: Install Dependencies
-        env:
-          TOKEN: "${{ secrets.ORG_GH_TOKEN }}"
-        run: >
-          git config --global url."https://${TOKEN}@github.com".insteadOf "https://github.com"
-
-          go install github.com/wadey/gocovmerge@latest
+          files: "structviewer.cov, golanglint.xml"
       - name: Install Task
         uses: arduino/setup-task@v1
         with:
@@ -120,7 +113,7 @@ jobs:
             -Dsonar.exclusions=**/mocks/*.go,**/tempmocks/*.go
             -Dsonar.test.inclusions=**/*_test.go
             -Dsonar.tests=.
-            -Dsonar.go.coverage.reportPaths=merged-coverage.cov
+            -Dsonar.go.coverage.reportPaths=structviewer.cov
             -Dsonar.go.golangci-lint.reportPaths=golanglint.xml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
