--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -46,7 +46,7 @@ jobs:
           TOKEN: "${{ secrets.ORG_GH_TOKEN }}"
         run: >
           git config --global url."https://${TOKEN}@github.com".insteadOf "https://github.com"
-      - name: Checkout Storage
+      - name: Checkout structviewer
         uses: actions/checkout@v2
         with:
           fetch-depth: 2
@@ -75,7 +75,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [ci-test]
     steps:
-      - name: Checkout Tyk Storage
+      - name: Checkout Tyk structviewer
         uses: actions/checkout@v2
         with:
           fetch-depth: 2
@@ -105,7 +105,7 @@ jobs:
         with:
           args: >
             -Dsonar.organization=tyktechnologies
-            -Dsonar.projectKey=TykTechnologies_storage
+            -Dsonar.projectKey=TykTechnologies_structviewer
             -Dsonar.sources=.
             -Dsonar.coverage.exclusions=**/*_test.go,**/mocks/*.go,**/tempmocks/*.go
             -Dsonar.exclusions=**/mocks/*.go,**/tempmocks/*.go
