--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -83,14 +83,14 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: ${{ env.GO_VERSION }}
-      # - name: Download coverage artifacts
-      #   uses: actions/download-artifact@v2
-      #   with:
-      #     name: coverage
-      # - name: Download golangcilint artifacts
-      #   uses: actions/download-artifact@v2
-      #   with:golangcilint
-      #     name:
+      - name: Download coverage artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: structviewer
+      - name: Download golangcilint artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: golangcilint
       - name: Check reports existence
         id: check_files
         uses: andstor/file-existence-action@v1
