--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -35,8 +35,20 @@ jobs:
       - name: Run staticcheck
         run: staticcheck ./...
 
+      - name: Install Task
+        uses: arduino/setup-task@v1
+        with:
+          version: 3
+
       - name: Run tests
-        run: go test -race -vet=off ./...
+        run: task run-tests
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: structviewer
+          retention-days: 1
+          path: |
+            structviewer.cov
 
   golangci-lint:
     runs-on: ubuntu-latest
@@ -96,10 +108,6 @@ jobs:
         uses: andstor/file-existence-action@v1
         with:
           files: "structviewer.cov, golanglint.xml"
-      - name: Install Task
-        uses: arduino/setup-task@v1
-        with:
-          version: 3
       - name: SonarCloud Scan
         uses: sonarsource/sonarcloud-github-action@master
         with:
